<resources>
    <string name="app_name">МАИ мобайл</string>
    <string name="lower_week">Нижняя неделя</string>
    <string name="faculties">Факультеты</string>
    <string name="session">Сессия</string>
    <string name="practics">Практика</string>
    <string name="scholarships">Стипендии</string>
    <string name="libraries">Библиотеки</string>
    <string name="canteens">Столовые</string>
    <string name="dotations">Дотации и материальная помощь</string>
    <string name="military_institute">Военный институт</string>
    <string name="secondary_education">Второе высшее образование</string>
    <string name="magistracy">Магистратура</string>
    <string name="courses">Курсы</string>
    <string name="academic_mobility">Академическая мобильность</string>
    <string name="employment_center">Центр трудоустройства МАИ</string>
    <string name="science">Научная деятельность</string>
    <string name="studgorodok">Студгородок</string>
    <string name="sanatorium">Санаторий-профилакторий</string>
    <string name="recreation_centers">Базы отдыха</string>
    <string name="sport_sections">Спортивные секции</string>
    <string name="dk">Дворец культуры и техники МАИ</string>
    <string name="dosaaf">Спортивно-технические клубы (ДОСААФ МАИ)</string>
    <string name="debating_club">Клуб Дебаты МАИ</string>
    <string name="maisky_vzlet">Фестиваль «МАЙский взлёт»</string>
    <string name="profkom">Профком студентов и аспирантов МАИ</string>
    <string name="somol">Союз молодёжи</string>
    <string name="press">Маёвские СМИ и интернет-ресурсы</string>
    <string name="media">Медиа</string>
    <string name="history">История МАИ</string>
    <string name="life">Жизнь маёвца</string>
    <string name="help">В помощь студенту</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="toolbar_title_student">Студент</string>
    <string name="tab_main">Главная</string>
    <string name="tab_news">Новости</string>
    <string name="tab_map">Карта</string>
    <string name="tab_schedule">Расписание</string>
    <string name="btn_student">Я — студент</string>
    <string name="btn_abitur">Я — абитуриент</string>
    <string name="militar">В 1930 году в составе МАИ была организована кафедра военных наук, которая впоследствии стала называться военной кафедрой. С 1990 года военное обучение студентов стало добровольным, военная кафедра была преобразована в отделение военной подготовки, с 1995 года в факультет военного обучения (ФВО). В 2008 году на базе ФВО МАИ были образованы военная кафедра и учебный военный центр (УВЦ).\nВ 2009 году создан Военный институт МАИ, в состав которого вошли военная кафедра и учебный военный центр.</string>
    <string name="magistrat">После получения диплома о высшем образовании у каждого выпускника есть возможность продолжить обучение в магистратуре МАИ. Поступить в магистратуру можно как на бюджетной, так и на платной основе. Срок обучения по очной форме составляет 2 года, очно-заочной и заочной — 2,5 года.</string>
    <string name="recreation">Сотрудники, студенты и  аспиранты МАИ имеют возможность провести каникулы и  отпуска на  базах отдыха МАИ. Руководство института обеспечило функционирование и  развитие баз отдыха и  сохранило льготные условия для отдыха и  лечения работников института и  членов их  семей, аспирантов и  студентов.</string>
    <string name="dk_title">
        Стань звездой маёвской сцены!
    </string>
    <string name="mai_smi_title">Маёвские СМИ</string>
    <string name="mai_smis"><![CDATA[•  «Пропеллер»  – официальная газета МАИ<br> •  «От винта»  – молодёжная общественно-политическая газета<br> • СМИ Профкома студентов и аспирантов МАИ<br> •  «Импульс»  – газета факультета № 4<br> •  «Поехали!»  – газета факультета № 6<br> •  «Под прицелом»  – газета факультета № 7<br> •  «Восьмёрка»  – газета факультета № 8]]></string>
    <string name="internet_title">Интернет-ресурсы</string>
    <string name="inets"><![CDATA[• www.mai.ru – официальный сайт МАИ<br> • vk.com/mai_niu – официальный аккаунт МАИ<br> • vk.com/mai_club – сообщество маёвцев<br> • vk.com/mai_first – сообщество первокурсников МАИ<br> • vk.com/ordenmai – паблик  «Орден МАИ»<br> • facebook.com/mai.university – официальный аккаунт МАИ<br> • facebook.com/MoscowAviationInstitute – интернациональный аккаунт МАИ<br> • instagram.com/mai_university/ – официальный аккаунт МАИ<br> • twitter.com/newsMAI – официальный аккаунт МАИ<br> • periscope.tv/newsmai — официальный аккаунт МАИ<br> • youtube.com/universitymai — официальный канал МАИ • mai.exler.ru – студенческая энциклопедия МАИ]]></string>
    <string name="toolbar_title_abitur">Абитуриент</string>
    <string name="tab_priem">Приёмная комиссия</string>
    <string name="tab_media">Медиа</string>
    <string name="upper_week">Верхняя неделя</string>
    <string name="napravlenia">Направления подготовки</string>
    <string name="dormitories">Общежития</string>
    <string name="alumni">Выпускники</string>
    <string name="podgotovka">Подготовка к поступлению</string>
    <string name="docs">Документы для поступления</string>
    <string name="nabor">Целевой набор</string>
    <string name="school_centers">Центры обучения школьников</string>
    <string name="school_activity">Мероприятия для школьников</string>
    <string name="dosug">Досуг</string>
    <string name="contacts">Контакты</string>
    <string name="podgot">Залог успешного поступления в МАИ и другие престижные технические вузы — качественная подготовка к ЕГЭ, вступительным испытаниям. Школьная программа не всегда способна дать полный объём знаний, необходимый для успешной сдачи экзаменов. Для того чтобы помочь абитуриентам успешно сдать вступительные испытания, в МАИ существует целый ряд подготовительных курсов и отделений для 9-х, 10-х и 11-х классов.</string>
    <string name="address"><![CDATA[<b>Адрес приёмной комиссии:</b><br>г. Москва, ул. Дубосековская, д. 4,<br>МАИ, Главный Учебный Корпус (ГУК),<br>4-й этаж<br>г. Москва,<br>ул. Оршанская, д.3, 114В]]></string>
    <string name="phone"><![CDATA[<b>Телефоны для справок (с 10 до 17 ч.):</b><br>+7-499-158-4065 (многоканальный)<br>+7-499-158-4709<br>+7-499-141-9505<br>+7-499-141-9503]]></string>
    <string name="email"><![CDATA[<b>Электронная почта</b><br>priem@mai.ru]]></string>
    <string name="site"><![CDATA[<b>Сайт Приемной комиссии</b><br>www.priem.mai.ru]]></string>
    <string name="hint">* — работают по субботам\n** — работают по субботам и воскресеньям</string>
    <string name="f1"><![CDATA[<p class="p2"><span class="s1"><hr>Факультет основан в 1930 году.</span></p>
<p class="p2"><span class="s1">На факультете ведётся подготовка бакалавров, специалистов и магистров по разработке и проектированию воздушных судов различного целевого назначения, исследованию аэродинамики и динамики полёта летательных аппаратов, нормированию и проверке лётной годности воздушных судов, анализу эффективности авиационных комплексов.</span></p>
<p class="p2"><span class="s1">Студенты проходят производственные и преддипломную практики на ведущих предприятиях авиапрома — таких, как ОКБ Сухого, РСК «МиГ», ПАО «Туполев», Корпорация «Иркут», ОАО «Ил» и других.</span></p>
<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Направления и специальности подготовки</b></span></h3>
<h4 style="margin: 0.0px 0.0px 16.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Бакалавриат</b></span></h4>
<p class="p2"><span class="s1">24.04.03 — Баллистика и гидроаэродинамика<br>
24.03.04 — Авиастроение<br>
27.03.02 — Управление качеством<br>
27.03.03 — Системный анализ и управление<br>
43.03.01 — Сервис</span></p>
<h4 style="margin: 0.0px 0.0px 16.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Специалитет</b></span></h4>
<p class="p2"><span class="s1">24.05.07 — Самолёто- и вертолётостроение<br>
27.05.01 — Специальные организационно-технические системы</span></p>
<h4 style="margin: 0.0px 0.0px 16.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Магистратура</b></span></h4>
<p class="p2"><span class="s1">24.04.04 — Авиастроение<br>
24.03.03 — Баллистика и гидроаэродинамика</span></p>]]></string>
    <string name="f2"><![CDATA[<p>Факультет основан в&nbsp;1930&nbsp;году.</p> <p>Факультет осуществляет подготовку специалистов по&nbsp;всем типам двигателей различных летательных аппаратов: это и&nbsp;авиационные двигатели, и&nbsp;двигатели для ракет, спутников и&nbsp;межпланетных космических аппаратов.</p> <p>В&nbsp;учебном процессе используются передовые достижения отечественной и&nbsp;зарубежной науки в&nbsp;области авиационного и&nbsp;ракетно-космического двигателестроения.</p> <p>Факультет занимает лидирующее положение в&nbsp;исследованиях и&nbsp;разработке гиперзвуковых двигателей, плазменно-стационарных двигателей и&nbsp;ускорителей, физико-математических моделей реактивных двигателей и&nbsp;методов их&nbsp;расчета, а&nbsp;также энергофизических и&nbsp;технологических установок, использующих ионно-плазменные, электронные, лазерные и&nbsp;криогенные технологии.</p>  <h3>Направления и специальности подготовки</h3> <h4>Бакалавриат</h4>   <p>24.03.05&nbsp;&mdash; Двигатели летательных аппаратов<br> 20.03.01&nbsp;&mdash; Техносферная безопасность<br> 27.03.01&nbsp;&mdash; Стандартизация и&nbsp;метрология</p>   <h4>Специалитет</h4>  <p>24.05.02&nbsp;&mdash; Проектирование авиационных и&nbsp;ракетных двигателей</p>  <h4>Магистратура</h4>  <p>24.04.05&nbsp;&mdash; Двигатели летательных аппаратов<br> 20.04.01&nbsp;&mdash; Техносферная безопасность<br> 27.04.01&nbsp;&mdash; Стандартизация и&nbsp;метрология</p>]]></string>
</resources>