<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/g00"
        android:checkableBehavior="single">
        <item
            android:checkable="false"
            android:title="@string/lower_week"/>
        <item
            android:id="@+id/menu_faculties"
            android:title="@string/faculties"/>
        <item
            android:id="@+id/menu_session"
            android:title="@string/session"/>
        <item
            android:id="@+id/menu_practics"
            android:title="@string/practics"/>
        <item
            android:id="@+id/menu_scholarships"
            android:title="@string/scholarships"/>
        <item
            android:id="@+id/menu_libraries"
            android:title="@string/libraries"/>
        <item
            android:id="@+id/menu_canteens"
            android:title="@string/canteens"/>
        <item
            android:id="@+id/menu_dotations"
            android:title="@string/dotations"/>
    </group>
    <group
        android:id="@+id/g01"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_military"
            android:title="@string/military_institute"/>
        <item
            android:id="@+id/menu_secondary_education"
            android:title="@string/secondary_education"/>
        <item
            android:id="@+id/menu_magistracy"
            android:title="@string/magistracy"/>
        <item
            android:id="@+id/menu_courses"
            android:title="@string/courses"/>
        <item
            android:id="@+id/menu_academic_mobility"
            android:title="@string/academic_mobility"/>
        <item
            android:id="@+id/menu_employment"
            android:title="@string/employment_center"/>
    </group>
    <group
        android:id="@+id/g02"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_science"
            android:title="@string/science"/>
    </group>
    <group
        android:id="@+id/g03"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dormitories"
            android:title="@string/dormitories"/>
        <item
            android:id="@+id/menu_sanatorium"
            android:title="@string/sanatorium"/>
        <item
            android:id="@+id/menu_recreations"
            android:title="@string/recreation_centers"/>
    </group>
    <group
        android:id="@+id/g04"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sport"
            android:title="@string/sport_sections"/>
        <item
            android:id="@+id/menu_dk"
            android:title="@string/dk"/>
        <item
            android:id="@+id/menu_dosaaf"
            android:title="@string/dosaaf"/>
        <item
            android:id="@+id/menu_debating_club"
            android:title="@string/debating_club"/>
        <item
            android:id="@+id/menu_maisky_vzlet"
            android:title="@string/maisky_vzlet"/>
    </group>
    <group
        android:id="@+id/g05"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_profkom"
            android:title="@string/profkom"/>
        <item
            android:id="@+id/menu_somol"
            android:title="@string/somol"/>
        <item
            android:id="@+id/menu_press"
            android:title="@string/press"/>
        <item
            android:id="@+id/menu_media"
            android:title="@string/media"/>
        <item
            android:id="@+id/menu_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/menu_life"
            android:title="@string/life"/>
        <item
            android:id="@+id/help"
            android:title="@string/help"/>
    </group>
</menu>