<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/g00"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_faculties"
            android:title="@string/faculties"/>
        <item
            android:id="@+id/menu_napravlenia"
            android:title="@string/napravlenia"/>
        <item
            android:id="@+id/menu_dormitories"
            android:title="@string/dormitories"/>
        <item
            android:id="@+id/menu_military"
            android:title="@string/military_institute"/>
        <item
            android:id="@+id/menu_sport"
            android:title="@string/sport_sections"/>
        <item
            android:id="@+id/menu_alumni"
            android:title="@string/alumni"/>
        <item
            android:id="@+id/menu_podgotovka"
            android:title="@string/podgotovka"/>
        <item
            android:id="@+id/menu_docs"
            android:title="@string/docs"/>
        <item
            android:id="@+id/menu_nabor"
            android:title="@string/nabor"/>
        <item
            android:id="@+id/menu_school_centers"
            android:title="@string/school_centers"/>
        <item
            android:id="@+id/menu_school_activity"
            android:title="@string/school_activity"/>
        <item
            android:id="@+id/menu_maisky_vzlet"
            android:title="@string/maisky_vzlet"/>
        <item
            android:id="@+id/menu_dosug"
            android:title="@string/dosug"/>
        <item
            android:id="@+id/menu_history"
            android:title="@string/history"/>
        <item
            android:id="@+id/menu_contacts"
            android:title="@string/contacts"/>
    </group>
</menu>